# Interaction-Model

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
browsersessions/: calibration-copied-or-scripted-typing.json  calibration-cursor-and-selection-edits (1).json  calibration-short-command-like-inputs.json
client/: index.html  package-lock.json  package.json  review.html  tsconfig.json  vite.config.ts
docs/: build-plan.md  phase-0-implementation.md  phase0a-implementation-log.md  phase1-implementation-log.md  wp13-implementation-log.md  wp14-implementation-log.md  wp15-claude-review-packet.md  wp15-implementation-log.md  wp16-implementation-log.md  wp17-implementation-log.md
scripts/: analyze_calibration.py  analyze_calibration_family_evidence.py  apply_heldout_asset_review.py  assemble_blind_replay_packet.py  build_review_bundle.py  export_calibration_blind_packet.py  export_schemas.py  extract_input_timing_profile.py  generate_behavior_spec_examples.py  generate_c5_pilot_review.py  generate_c6_pilot_package.py  generate_calibration_coverage.py  generate_calibration_population.py  generate_g7_readiness_packet.py  generate_heldout_asset_review.py  generate_probe_states.py  prepare_teacher_canary.py  record_golden.py  run_probe_batch.py  run_probe_harness.py  run_qwen_sanity.py  run_teacher_canary.py  wp13_dry_run.py
spec/: APPROVALS.md  FREEZE.md  behavior-spec.md  prompt-template-v1.txt
tests/: conftest.py  test_actions.py  test_app.py  test_apply_heldout_asset_review.py  test_asset_expansion.py  test_asset_registry.py  test_asset_validation.py  (+71 more)
(+4107 files in other folders)
