[project]
name = "im"
version = "0.1.0"
description = "Event-sourced text interaction model runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "fastapi",
    "uvicorn",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/im"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gate: phase exit-gate tests (G1–G4 and 0b gates)",
]
addopts = "--no-header -q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
